# CAL_proj1

./: .gitignore  CMakeLists.txt  README.md
Mapa da cidade do Porto-20210505/: porto_strong_edges.txt  porto_strong_nodes_latlng.txt
Mapas-20210505/TagExamples/Porto/: t12_tags_porto.txt
resources/Mapa da cidade do Porto-20210505/: parking_coordinates.geojson  porto_strong_edges.txt  porto_strong_nodes_latlng.txt
resources/Mapas-20210505/TagExamples/Porto/: t12_tags_porto_backup.txt  t13_tags_porto.txt
src/: Algorithm.cpp  Algorithm.h  DynamicPriceParking.cpp  DynamicPriceParking.h  Edge.h  FileManagement.cpp  FileManagement.h  FixedPriceParking.cpp  FixedPriceParking.h  GeneralPath.cpp  GeneralPath.h  Graph.h  Interface.cpp  Interface.h  MultiplePath.cpp  MultiplePath.h  MutablePriorityQueue.h  Node.h  Parking.cpp  Parking.h  Path.cpp  Path.h  Vertex.h  ViewGraph.cpp  ViewGraph.h  main.cpp  test1
src/TP7_graphviewer/: ex1.cpp  ex2.cpp  ex3.cpp  ex4.cpp  main.cpp
src/parkingsTags/: main.cpp
